# PiEngine

./: .gitignore  README.md  meson.build
.github/workflows/: ci_meson.yml
example/: vertex.glsl
example/color/: fragment.glsl
example/scripts/: rotate.lua
src/: file_ops.cpp  iostream_out_ops.cpp  main.cpp  mesh.cpp  script.cpp  shader.cpp  texture.cpp
src/include-private/piengine/: cached_var.hpp  file_ops.hpp  iostream_out_ops.hpp  mesh.hpp  renderobject.hpp  script.hpp  script_types.hpp  shader.hpp  texture.hpp
src/include-private/piengine/loaders/: dds.hpp
src/include-private/piengine/managers/: camera.hpp  input.hpp  render.hpp  script.hpp  shader.hpp  window.hpp
src/include-private/piengine/renderobjects/: meshobject.hpp  renderobject.hpp
src/loaders/: dds.cpp
src/managers/: camera.cpp  input.cpp  render.cpp  script.cpp  window.cpp
src/renderobjects/: meshobject.cpp  renderobject.cpp
subprojects/: sol2.wrap
